crates/reinhardt-pages/tests/ui/form/fail/month_input_rejects_uuid_field.stderr
error: MonthInput is only supported on string-valued fields
 --> tests/ui/form/fail/month_input_rejects_uuid_field.rs:8:4
  |
8 |             billing_month: UuidField {
  |             ^^^^^^^^^^^^^
